{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 58,
  "lineage": "ed944285-fe24-290e-17c3-96537014f854",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:security-group/sg-0e3756197d0d3d509",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e3756197d0d3d509",
            "ingress": [],
            "name": "all_worker_management20240730141700150900000007",
            "name_prefix": "all_worker_management",
            "owner_id": "829669656648",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-2140964558",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e3756197d0d3d509",
            "security_group_rule_id": "sgr-08038c6b18eb5db60",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-3218690180",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e3756197d0d3d509",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:security-group/sg-027df6e5c42717fe2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-027df6e5c42717fe2",
            "ingress": [],
            "name": "golang-demo-eks-st5OpCju-cluster-20240730141700149800000006",
            "name_prefix": "golang-demo-eks-st5OpCju-cluster-",
            "owner_id": "829669656648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "golang-demo-eks-st5OpCju-cluster",
              "cluster": "demo"
            },
            "tags_all": {
              "Name": "golang-demo-eks-st5OpCju-cluster",
              "cluster": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:security-group/sg-0dc7418ee526bbf38",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0dc7418ee526bbf38",
            "ingress": [],
            "name": "golang-demo-eks-st5OpCju-node-20240730141700148800000005",
            "name_prefix": "golang-demo-eks-st5OpCju-node-",
            "owner_id": "829669656648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "golang-demo-eks-st5OpCju-node",
              "cluster": "demo",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "owned"
            },
            "tags_all": {
              "Name": "golang-demo-eks-st5OpCju-node",
              "cluster": "demo",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2182204266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027df6e5c42717fe2",
            "security_group_rule_id": "sgr-073767e8192fd57dc",
            "self": false,
            "source_security_group_id": "sg-0dc7418ee526bbf38",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-360814866",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0dc7418ee526bbf38",
            "security_group_rule_id": "sgr-0f10f62db1dfb402a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3755125636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc7418ee526bbf38",
            "security_group_rule_id": "sgr-092d27f7fc4ffd1f1",
            "self": false,
            "source_security_group_id": "sg-027df6e5c42717fe2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1541600931",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc7418ee526bbf38",
            "security_group_rule_id": "sgr-031dda8ce042e5583",
            "self": false,
            "source_security_group_id": "sg-027df6e5c42717fe2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2459996469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc7418ee526bbf38",
            "security_group_rule_id": "sgr-094d0585fdee8cf68",
            "self": false,
            "source_security_group_id": "sg-027df6e5c42717fe2",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2180820244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc7418ee526bbf38",
            "security_group_rule_id": "sgr-0a2ed23f261e3c6d7",
            "self": false,
            "source_security_group_id": "sg-027df6e5c42717fe2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3848117983",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc7418ee526bbf38",
            "security_group_rule_id": "sgr-01bf42390ed0fef2b",
            "self": false,
            "source_security_group_id": "sg-027df6e5c42717fe2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-798702129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc7418ee526bbf38",
            "security_group_rule_id": "sgr-089d43d62991d04cd",
            "self": false,
            "source_security_group_id": "sg-027df6e5c42717fe2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1216233733",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc7418ee526bbf38",
            "security_group_rule_id": "sgr-0cf0764aec8a3968c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4045014202",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc7418ee526bbf38",
            "security_group_rule_id": "sgr-0d10e1177b9c61498",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1430628181",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0dc7418ee526bbf38",
            "security_group_rule_id": "sgr-04aa1058af7f18177",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:network-acl/acl-03843fbd90d37550c",
            "default_network_acl_id": "acl-03843fbd90d37550c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03843fbd90d37550c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "829669656648",
            "subnet_ids": [
              "subnet-01fee2a8af7f61b64",
              "subnet-02e899ae65182e24c",
              "subnet-0398606b918fc56c8",
              "subnet-05cbefdb5d5837285"
            ],
            "tags": {
              "Name": "golang-demo-vpc-default",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-default",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:route-table/rtb-07534d6b4d411ec4b",
            "default_route_table_id": "rtb-07534d6b4d411ec4b",
            "id": "rtb-07534d6b4d411ec4b",
            "owner_id": "829669656648",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "golang-demo-vpc-default",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-default",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:security-group/sg-01a27b6367c724520",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01a27b6367c724520",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "829669656648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "golang-demo-vpc-default",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-default",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a593d7255c1aa6fb",
            "arn": "arn:aws:ec2:eu-west-2:829669656648:elastic-ip/eipalloc-0a593d7255c1aa6fb",
            "domain": "vpc",
            "id": "eipalloc-0a593d7255c1aa6fb",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-41-94-154.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.94.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "golang-demo-vpc-eu-west-2a",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-eu-west-2a",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:internet-gateway/igw-03b1145885d5a0d38",
            "id": "igw-03b1145885d5a0d38",
            "owner_id": "829669656648",
            "tags": {
              "Name": "golang-demo-vpc",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "tags_all": {
              "Name": "golang-demo-vpc",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a593d7255c1aa6fb",
            "association_id": "eipassoc-06f0025024bf3d571",
            "connectivity_type": "public",
            "id": "nat-0b7f9f8930835c0e2",
            "network_interface_id": "eni-090af19e56341f9ed",
            "private_ip": "10.0.4.214",
            "public_ip": "13.41.94.154",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05cbefdb5d5837285",
            "tags": {
              "Name": "golang-demo-vpc-eu-west-2a",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-eu-west-2a",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-034488d6a4a87f0f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b7f9f8930835c0e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034488d6a4a87f0f7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b1145885d5a0d38",
            "id": "r-rtb-02d6560a4e160e9de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d6560a4e160e9de",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:route-table/rtb-034488d6a4a87f0f7",
            "id": "rtb-034488d6a4a87f0f7",
            "owner_id": "829669656648",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "golang-demo-vpc-private",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-private",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:route-table/rtb-02d6560a4e160e9de",
            "id": "rtb-02d6560a4e160e9de",
            "owner_id": "829669656648",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "golang-demo-vpc-public",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-public",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b35b214f70164e4f",
            "route_table_id": "rtb-034488d6a4a87f0f7",
            "subnet_id": "subnet-02e899ae65182e24c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c5f1badeb84d2c3",
            "route_table_id": "rtb-034488d6a4a87f0f7",
            "subnet_id": "subnet-0398606b918fc56c8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9af48670c09ad4",
            "route_table_id": "rtb-02d6560a4e160e9de",
            "subnet_id": "subnet-05cbefdb5d5837285"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d957da18f8719634",
            "route_table_id": "rtb-02d6560a4e160e9de",
            "subnet_id": "subnet-01fee2a8af7f61b64"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:subnet/subnet-02e899ae65182e24c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e899ae65182e24c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829669656648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "golang-demo-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:subnet/subnet-0398606b918fc56c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0398606b918fc56c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829669656648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "golang-demo-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:subnet/subnet-05cbefdb5d5837285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cbefdb5d5837285",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829669656648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "golang-demo-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:subnet/subnet-01fee2a8af7f61b64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fee2a8af7f61b64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829669656648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "golang-demo-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "golang-demo-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0eb2525a5ca71316c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:829669656648:vpc/vpc-0eb2525a5ca71316c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03843fbd90d37550c",
            "default_route_table_id": "rtb-07534d6b4d411ec4b",
            "default_security_group_id": "sg-01a27b6367c724520",
            "dhcp_options_id": "dopt-09ee2b2023ca6acc3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb2525a5ca71316c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07534d6b4d411ec4b",
            "owner_id": "829669656648",
            "tags": {
              "Name": "golang-demo-vpc",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            },
            "tags_all": {
              "Name": "golang-demo-vpc",
              "kubernetes.io/cluster/golang-demo-eks-st5OpCju": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}